[gd_scene load_steps=5 format=3 uid="uid://ofnaphcqerff"]

[ext_resource type="Script" path="res://Scripts/start_screen.gd" id="1_l6jgp"]
[ext_resource type="LabelSettings" uid="uid://beq4d7iguabky" path="res://Resources/title_label.tres" id="2_6o5yt"]
[ext_resource type="LabelSettings" uid="uid://cnpd02d1dmt6i" path="res://Resources/normal_text_label.tres" id="3_he0mn"]
[ext_resource type="LabelSettings" uid="uid://bsm7x5clu6urn" path="res://Resources/very_small_label_text.tres" id="4_mirwu"]

[node name="start screen" type="Node2D"]
script = ExtResource("1_l6jgp")

[node name="interface" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="background" type="ColorRect" parent="interface"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="Label" parent="interface"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 25.0
offset_bottom = 48.0
grow_horizontal = 2
text = "Blocks in Bits"
label_settings = ExtResource("2_6o5yt")
horizontal_alignment = 1

[node name="start_text" type="Label" parent="interface"]
unique_name_in_owner = true
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
text = "press [space] to start"
label_settings = ExtResource("3_he0mn")
horizontal_alignment = 1

[node name="start_text_controller" type="Label" parent="interface"]
unique_name_in_owner = true
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
text = "press [start button] to start"
label_settings = ExtResource("3_he0mn")
horizontal_alignment = 1

[node name="start_button" type="Button" parent="interface"]
unique_name_in_owner = true
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.5
offset_top = -55.0
offset_right = 30.5
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
text = "start game"

[node name="Label" type="Label" parent="interface"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -10.0
offset_right = 107.0
grow_horizontal = 2
grow_vertical = 0
text = "Disclaimer: we are not responsible for damages to controllers and screens. Enjoy."
label_settings = ExtResource("4_mirwu")

[connection signal="pressed" from="interface/start_button" to="." method="_on_start_button_pressed"]
